--- a/.hintrc
+++ b/.hintrc
@@ -13,6 +13,14 @@
           "scrollbar-color"
         ]
       }
+    ],
+    "compat-api/html": [
+      "default",
+      {
+        "ignore": [
+          "meta[name=theme-color]"
+        ]
+      }
     ]
   }
 }
